tests/snapshots/examples_fixtures/generics__failing__runtime__Ki076Ord.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/Ki076Ord.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
