tests/snapshots/examples_fixtures/generics__failing__runtime__SoleInstance.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/SoleInstance.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
