tests/snapshots/examples_fixtures/generics__failing__runtime__e2_ambiguous_instance_selection.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/e2_ambiguous_instance_selection.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
