tests/snapshots/examples_fixtures/generics__failing__runtime__ki_076_operator_in_module.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/ki_076_operator_in_module.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
