tests/snapshots/examples_fixtures/generics__failing__runtime__ki_090_constrained_fn_as_value.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/ki_090_constrained_fn_as_value.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
