tests/snapshots/examples_fixtures/generics__failing__runtime__sole_instance_dispatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/runtime/sole_instance_dispatch.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
